<resources>
    <string name="app_name">NatureLife</string>
    <string name="address">Address</string>
    <string name="username">User Name</string>
    <string name="submit">Submit</string>
    <string name="Email">Email</string>
    <string name="NicNumber">Nic Number</string>
    <string name="Password">Password</string>
    <string name="Repassword">Retype password</string>
    <string name="Accept">Accept</string>
    <string name="accept">I accept  Terms of use and Privacy Policy</string>
    <string name="Sign">Sign IN</string>
    <string name="Other">Other Accessories</string>
    <string name="code">Item Code</string>
    <string name="Price">Price</string>
    <string name="Title">Title</string>
    <string name="description">Description</string>
    <string name="Add">Add</string>
    <string name="Update">Update</string>
    <string name="Delect">Delect</string>
    <string name="cookingitem">cookingitem</string>
    <string name="itemcode">Item Code</string>
    <string name="prize">Prize</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="tent">Tent</string>
    <string name="sleepingbag">Sleeping Bag</string>
    <string name="otheraccessories">Other Accessories</string>
    <string name="chair">Chair</string>
    <string name="cameratripod">Camera Tripod</string>
    <string name="campingbag">Camping Bag</string>
    <string name="title_activity_camera">Camera</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cookingid">Cooking Id</string>
    <string name="deletebtn" />
    <string name="deletecooking">delete cooking</string>
    <string name="updateid">Update Id</string>
    <string name="cookingtitle">Cooking Titlt</string>
    <string name="price">Price</string>
    <string name="desupdate">description</string>
    <string name="update">Update</string>
</resources>