<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Sign"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editnameU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/username"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editaddressU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/address"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/edtEmailU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtnicU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/NicNumber"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtpassU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtrpassU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Repassword"
        android:inputType="textPassword"
        android:minHeight="48dp" />





    <Button
        android:id="@+id/btnsubmitU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit" />

</LinearLayout>