<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".cooking_item">

    <TextView
        android:id="@+id/cookingitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/cookingitem"
        android:text="Cooking Item"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/itemcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/itemcode"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/prize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/prize"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#03A9F4"
        android:hint="@string/add"
        android:textSize="18dp" />

</LinearLayout>