<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".UpdateDrone">

    <TextView
        android:id="@+id/txtupdateDrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:text="Update Cooking Item Details"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/deleteid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/updateid"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/updtetitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/cookingtitle"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/updateprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/desupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/desupdate"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:text="@string/update" />
</LinearLayout>