<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Adminhome">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:text="Admin Home"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/admin" />

    <Button
        android:id="@+id/tentbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/tent" />

    <Button
        android:id="@+id/sleepingbagbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/sleepingbag" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/cookingitem" />

    <Button
        android:id="@+id/otherbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/otheraccessories" />
</LinearLayout>