<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10pt"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Deletecooking">

    <TextView
        android:id="@+id/txtDeletedrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/deletecooking"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/deleteid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/cookingid"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/deletebtn" />

</LinearLayout>