<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Otheraccessories">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:text="Other Accessories"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:textAlignment="center"
        app:srcCompat="@drawable/chair" />

    <Button
        android:id="@+id/chairbtn"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/chair"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="159dp"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:textAlignment="center"
        app:srcCompat="@drawable/camera" />

    <Button
        android:id="@+id/cameratripodbtn"
        android:layout_width="187dp"
        android:layout_height="42dp"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/cameratripod"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="159dp"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:textAlignment="center"
        app:srcCompat="@drawable/bag" />

    <Button
        android:id="@+id/campingbagbtn"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/campingbag"
        android:textAlignment="center" />

</LinearLayout>